--- a/static.hzshuangmei.com/css/m/hzrlbns/css1.css
+++ b/static.hzshuangmei.com/css/m/hzrlbns/css1.css
@@ -179,6 +179,7 @@ a {
     top: -0.4rem;
     right: -0.275rem;
     font-size: .5rem;
+    margin-top: 0.05rem;
 }
 .rlposithree .tooparc {
     font-size: .45rem;
