无痕去眼袋专题修改
无痕去眼袋专题修改

--- a/static.hzshuangmei.com/css/pc/yandai/chaoding.css
+++ b/static.hzshuangmei.com/css/pc/yandai/chaoding.css
@@ -262,7 +262,7 @@ table {
     height: 670px;
     overflow: hidden;
     display: block;
-    background: url(http://www.hongzhuangzx.org/jczt/qyd/images/banner.jpg) no-repeat center top
+    background: url(https://img.hzshuangmei.com/pc/yandai/banner.jpg) no-repeat center top
 }
 
 .container .video-container {
