案例医生和项目列表页底部分页水平居中
案例医生和项目列表页底部分页水平居中

--- a/static.hzshuangmei.com/css/pc/list_case.css
+++ b/static.hzshuangmei.com/css/pc/list_case.css
@@ -81,6 +81,8 @@
     border:1px solid #ededed;
     margin:0 10px;
     margin-bottom: 55px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
     text-align: center;
 }
@@ -95,9 +97,12 @@
     left: 0;
     display: table;
     bottom:37px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding: 0 36px;
     background: #FFFFFF;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
 }
 
@@ -176,7 +181,8 @@
 }
 
 #case_tabCon .list:hover {
-    box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 4px 3px rgba(0, 0, 0, 0.2);
     color: #666666
 }
 
@@ -196,7 +202,13 @@
 }
 .pagination{
     width: 600px;
-    margin: 0 auto 50px
+    margin: 0 auto 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .pagination>li{
     float:left;
