--- a/static.hzshuangmei.com/css/m/quzhou/css.css
+++ b/static.hzshuangmei.com/css/m/quzhou/css.css
@@ -58,12 +58,11 @@ a {
 
 .bn {
     width: 100%;
-    margin-top: 1.625rem
 }
 
 .hx {
     width: 100%;
-    height: 125rem;
+    /*height: 125rem;*/
     background-color: #3e83d8;
     display: block
 }
@@ -145,7 +144,7 @@ a {
 
 .wrink ul li img {
     width: 100%;
-    border: 6.25rem solid #ffa722;
+    border: 0.1rem solid #ffa722;
     box-sizing: border-box
 }
 
@@ -153,19 +152,19 @@ a {
     width: 6.25rem;
     height: 1.75rem;
     background-color: #3e83d8;
-    padding-top: .25rem
+    /*padding-top: .25rem*/
 }
 
 .zixun1 {
-    margin: 0 auto
+    margin:  .25rem auto 0
 }
 
 .zixun-in {
     width: 5.75rem;
     height: 1.5rem;
     margin: 0 auto 0;
-    border: 6.25rem solid #9fc1ec;
-    border-radius: 62.5rem
+    border: 0.25rem solid #9fc1ec;
+    border-radius: 0.1rem;
 }
 
 .zixun-in p {
@@ -798,7 +797,7 @@ a {
 .zj-r ul {
     width: 100%;
     height: 5.5rem;
-    border-bottom: 6.25rem solid #454648
+    border-bottom: 0.15rem solid #454648
 }
 
 .zj-r li {
