--- a/static.hzshuangmei.com/css/m/quzhou/css.css
+++ b/static.hzshuangmei.com/css/m/quzhou/css.css
@@ -62,7 +62,7 @@ a {
 
 .hx {
     width: 100%;
-    /*height: 125rem;*/
+    height: 0.5rem;
     background-color: #3e83d8;
     display: block
 }
@@ -144,7 +144,7 @@ a {
 
 .wrink ul li img {
     width: 100%;
-    border: 0.1rem solid #ffa722;
+    border: 0.05rem solid #ffa722;
     box-sizing: border-box
 }
 
@@ -152,7 +152,7 @@ a {
     width: 6.25rem;
     height: 1.75rem;
     background-color: #3e83d8;
-    /*padding-top: .25rem*/
+    padding-top: .2rem;
 }
 
 .zixun1 {
@@ -402,7 +402,7 @@ a {
 }
 
 .zixun3 .zixun-in {
-    border: 6.25rem solid #fff
+    border:0.025rem solid #fff
 }
 
 .phone-yy3 {
@@ -420,7 +420,7 @@ a {
     width: 100%;
     height: 15rem;
     padding-top: 1.5rem;
-    background: url(images/botox-bg.png) no-repeat top center;
+    background: url(https://img.hzshuangmei.com/m/quzhou/botox-bg.png) no-repeat top center;
     background-size: contain
 }
 
@@ -445,7 +445,7 @@ a {
 .re-t {
     width: 1.75rem;
     height: 1.225rem;
-    background: url(images/leng.png) no-repeat top center;
+    background: url(https://img.hzshuangmei.com/m/quzhou/leng.png) no-repeat top center;
     text-align: center;
     line-height: 1.5rem;
     font-size: 1.2rem;
@@ -564,7 +564,7 @@ a {
     font-size: 2rem;
     color: #fff;
     text-indent: .2em;
-    background: url(images/leng2.png) no-repeat;
+    background: url(https://img.hzshuangmei.com/m/quzhou/leng2.png) no-repeat;
     background-size: contain
 }
 
@@ -682,7 +682,7 @@ a {
 }
 
 .zixun5 .zixun-in {
-    border: 6.25rem solid #fff
+    border: 0.025rem solid #fff
 }
 
 .phone {
