--- a/static.hzshuangmei.com/css/pc/quzhou/css.css
+++ b/static.hzshuangmei.com/css/pc/quzhou/css.css
@@ -55,6 +55,7 @@ opacity: 0.7 !important;}
 .phone-yy{width:230px; height: 23px; }
 .phone-yy1{margin:0 auto;}
 .bg_01{width: 100%; height:75px;}
+.zixun-in a{color:#fff  }
 /*如何变老*/
 .old{width:1160px; height: 993px;margin:0 auto; padding-top: 76px;}
 .one{width: 100%; height:64px; text-align: center; font-size:50px; color: #3e83d8; line-height: 64px;}
