--- a/static.hzshuangmei.com/css/pc/hzsypxf/css/sypxf.css
+++ b/static.hzshuangmei.com/css/pc/hzsypxf/css/sypxf.css
@@ -37,7 +37,7 @@ table { border-collapse:collapse; border-spacing:0; }
 }
 .m1_con1 h4{
     padding-top: 82px;
-    width: 476px;
+   text-align: center;
     height: 34px;
     font-size: 34px;
     line-height: 34px;
@@ -53,7 +53,6 @@ table { border-collapse:collapse; border-spacing:0; }
 }
 .m1_con1 p{
     margin: auto;
-    width: 752px;
     font-size: 16px;
     line-height: 30px;
     text-align: center;
